# tetris-web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml  test_implementation.py
docs/: ARCH.md  Acceptance.md  HANDBOOK.md  PRD.md  TASKS.md  TESTPLAN.md  openapi.yaml
prompts/: accept.md  docs.md  impl.md  plan.md
reports/: plan_diff.md  review_backend.md  review_codex.md  review_frontend.md
src/: README.md  __init__.py  main.py  models.py
src/rate_limit/: __init__.py  token_bucket.py
src/repositories/: __init__.py  base.py  memory.py
src/routers/: scores.py
src/services/: score_service.py
src/telemetry/: __init__.py  events.py
tests/api/: test_implementation.py  test_scores.py
tests/core/: clear_lines.spec.ts  lock_delay.spec.ts  rng_bag7.spec.ts  rotate_srs.spec.ts  scoring.spec.ts
tests/e2e/: play.spec.ts
tests/perf/: test_render_perf.py
tools/: gate.sh
web/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
web/src/: main.ts  style.css
web/src/analytics/: events.ts
web/src/core/: board.ts  game.ts  piece.ts  rng.ts  scoring.ts
web/src/input/: keyboard.ts
web/src/net/: client-factory.ts  offline-queue.ts  score-client.ts  types.ts
web/src/render/: canvas_renderer.ts  hud.ts
web/src/state/: persist.ts  store.ts
web/src/ui/: App.ts
web/src/ui/panels/: Leaderboard.ts  Settings.ts
web/src/workers/: service-worker.ts
